# starsystems

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: assetloader.hpp  asteroids.hpp  basetypes.hpp  drawable.hpp  engine.hpp  game.hpp  generator.hpp  global.hpp  gui.hpp  light.hpp  mesh.hpp  model.hpp  planet.hpp  primitives.hpp  renderer.hpp  scene.hpp  shader.hpp  skyrenderer.hpp  stargame.hpp  view.hpp  water.hpp  waterframebuffer.hpp  watertile.hpp
include/drawable/: drawable.hpp  drawablefactory.hpp  enginetypes.hpp  graphicapi.hpp  mesh.hpp  meshdatatypes.hpp  primitives.hpp
include/light/: light.hpp
include/render/: renderer.hpp  shader.hpp  shaderimplementations.hpp
include/scene/: game.hpp  gui.hpp  scene.hpp  scenerenderdata.hpp  view.hpp
include/terrain/: colorgenerator.hpp  generator.hpp  heightmap.hpp  perlinnoise.hpp  terrain.hpp  terrainchunk.hpp  terraindatatypes.hpp  terraingenerator.hpp  terrainmanager.hpp  terrainnode.hpp  terrainquadtree.hpp  terraintile.hpp
include/utils/: assetloader.hpp  mathutils.hpp  textureloader.hpp  threadpool.hpp
lib/: engine.cpp  oglheader.hpp  windowheader.hpp
lib/drawable/: drawable.cpp  drawablefactory.cpp  mesh.cpp  primitives.cpp  primitives.hpp
lib/render/: framebuffer.hpp  guirenderer.cpp  guirenderer.hpp  postprocessor.cpp  postprocessor.hpp  renderer.cpp  shader.cpp  skyrenderer.cpp  skyrenderer.hpp  terrainrenderer.cpp  terrainrenderer.hpp  vaorenderer.cpp  vaorenderer.hpp  waterframebuffer.cpp  waterframebuffer.hpp  waterrenderer.cpp  waterrenderer.hpp
lib/scene/: game.cpp  gui.cpp  scene.cpp  view.cpp
lib/terrain/: colorgenerator.cpp  heightmap.cpp  perlinnoise.cpp  terrain.cpp  terrainchunk.cpp  terraingenerator.cpp  terrainmanager.cpp  terrainmeshdata.cpp  terrainmeshdata.hpp  terrainnode.cpp  terrainquadtree.cpp  terraintile.cpp
lib/utils/: assetloader.cpp  textureloader.cpp
shader/: StandardShading.fs  StandardShading.vs  debugNormalVector.fs  debugNormalVector.gs  debugNormalVector.vs  flatColor.fs  flatColor.vs  guiShader.fs  guiShader.vs  instanceShader.fs  instanceShader.vs  instanceTerrainTest.vs  lightmaps.fs  lightmaps.vs  plane.fs  plane.vs  posProcess_atmosphere.fs  postProcessAtmo.fs  screenSpace.vs  skybox.fs  skybox.vs  sun.fs  sun.vs  tessControlShader.tcs  tessEvalShader.tes  tessFragmentShader.fs  tessVertexShader.vs  testVertexTexture.vs  waterShader.fs  waterShader.vs  waterShaderPerformance.fs
src/: starsystems.cpp
src/common/: assetloader.cpp  asteroids.hpp  mesh.cpp  model.cpp  planet.cpp  planet.hpp  scene.cpp  shader.cpp  stargame.cpp  view.cpp
test/: CMakeLists.txt
